rebase test - subbranch

--- a/commit.html
+++ b/commit.html
@@ -10,5 +10,6 @@
     <p>modify v2</p>
     <p>Using New Branch for test</p>
     <p>first modifiying at subbranch</p>
+    <p>test rebase</p>
   </body>
 </html>
